--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -318,13 +318,12 @@
     </system.web>
     <system.webServer>
         <httpErrors errorMode="Detailed" existingResponse="PassThrough">
-            <clear />
-            <remove statusCode="403" subStatusCode="-1"/>
-            <remove statusCode="404" subStatusCode="-1"/>
-            <remove statusCode="500" subStatusCode="-1"/>
-            <error path="/accessdenied" responseMode="ExecuteURL" statusCode="403"/>
-            <error path="/notfound" responseMode="ExecuteURL" statusCode="404"/>
-            <error path="/error" responseMode="ExecuteURL" statusCode="500"/>
+            <remove statusCode="403"/>
+            <remove statusCode="404"/>
+            <remove statusCode="500"/>
+            <error path="403.html" statusCode="403"/>
+            <error path="404.html" statusCode="404"/>
+            <error path="500.html" statusCode="500"/>
         </httpErrors>
         <httpProtocol>
             <customHeaders>
