Updated Web.config custom error pages. customErrors node - requires ASP.NET, strips HTTP status codes, doesnt handle HttpStatusCodeResult, allows catch-all. httpErrors node - doesnt require ASP.NET, doesnt strip HTTP status codes, handles HttpStatusCodeResult, doesnt allow catch-all. Opted for httpErrors node and specifying error pages for all HTTP status codes >= 400.

--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -318,12 +318,46 @@
     </system.web>
     <system.webServer>
         <httpErrors errorMode="Detailed" existingResponse="PassThrough">
-            <remove statusCode="403"/>
-            <remove statusCode="404"/>
-            <remove statusCode="500"/>
+            <clear/>            
+            <error path="500.html" statusCode="400"/>
+            <error path="500.html" statusCode="401"/>
+            <error path="500.html" statusCode="402"/>
             <error path="403.html" statusCode="403"/>
             <error path="404.html" statusCode="404"/>
+            <error path="500.html" statusCode="405"/>
+            <error path="500.html" statusCode="406"/>
+            <error path="500.html" statusCode="407"/>
+            <error path="500.html" statusCode="408"/>
+            <error path="500.html" statusCode="409"/>
+            <error path="500.html" statusCode="410"/>
+            <error path="500.html" statusCode="411"/>
+            <error path="500.html" statusCode="412"/>
+            <error path="500.html" statusCode="413"/>
+            <error path="500.html" statusCode="414"/>
+            <error path="500.html" statusCode="415"/>
+            <error path="500.html" statusCode="416"/>
+            <error path="500.html" statusCode="417"/>
+            <error path="500.html" statusCode="418"/>
+            <error path="500.html" statusCode="421"/>
+            <error path="500.html" statusCode="422"/>
+            <error path="500.html" statusCode="423"/>
+            <error path="500.html" statusCode="424"/>
+            <error path="500.html" statusCode="426"/>
+            <error path="500.html" statusCode="428"/>
+            <error path="500.html" statusCode="429"/>
+            <error path="500.html" statusCode="431"/>
+            <error path="500.html" statusCode="451"/>
             <error path="500.html" statusCode="500"/>
+            <error path="500.html" statusCode="501"/>
+            <error path="500.html" statusCode="502"/>
+            <error path="500.html" statusCode="503"/>
+            <error path="500.html" statusCode="504"/>
+            <error path="500.html" statusCode="505"/>
+            <error path="500.html" statusCode="506"/>
+            <error path="500.html" statusCode="507"/>
+            <error path="500.html" statusCode="508"/>
+            <error path="500.html" statusCode="510"/>
+            <error path="500.html" statusCode="511"/>
         </httpErrors>
         <httpProtocol>
             <customHeaders>
@@ -337,10 +371,10 @@
             </customHeaders>
         </httpProtocol>
         <modules>
-            <remove name="TelemetryCorrelationHttpModule"/>
-            <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler"/>
             <remove name="ApplicationInsightsWebTracking"/>
+            <remove name="TelemetryCorrelationHttpModule"/>
             <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler"/>
+            <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler"/>
         </modules>
         <rewrite>
             <rules>
