--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -319,45 +319,45 @@
     <system.webServer>
         <httpErrors errorMode="Detailed" existingResponse="PassThrough">
             <clear/>            
-            <error path="500.html" statusCode="400"/>
-            <error path="500.html" statusCode="401"/>
-            <error path="500.html" statusCode="402"/>
+            <error path="Error.html" statusCode="400"/>
+            <error path="Error.html" statusCode="401"/>
+            <error path="Error.html" statusCode="402"/>
             <error path="403.html" statusCode="403"/>
             <error path="404.html" statusCode="404"/>
-            <error path="500.html" statusCode="405"/>
-            <error path="500.html" statusCode="406"/>
-            <error path="500.html" statusCode="407"/>
-            <error path="500.html" statusCode="408"/>
-            <error path="500.html" statusCode="409"/>
-            <error path="500.html" statusCode="410"/>
-            <error path="500.html" statusCode="411"/>
-            <error path="500.html" statusCode="412"/>
-            <error path="500.html" statusCode="413"/>
-            <error path="500.html" statusCode="414"/>
-            <error path="500.html" statusCode="415"/>
-            <error path="500.html" statusCode="416"/>
-            <error path="500.html" statusCode="417"/>
-            <error path="500.html" statusCode="418"/>
-            <error path="500.html" statusCode="421"/>
-            <error path="500.html" statusCode="422"/>
-            <error path="500.html" statusCode="423"/>
-            <error path="500.html" statusCode="424"/>
-            <error path="500.html" statusCode="426"/>
-            <error path="500.html" statusCode="428"/>
-            <error path="500.html" statusCode="429"/>
-            <error path="500.html" statusCode="431"/>
-            <error path="500.html" statusCode="451"/>
-            <error path="500.html" statusCode="500"/>
-            <error path="500.html" statusCode="501"/>
-            <error path="500.html" statusCode="502"/>
-            <error path="500.html" statusCode="503"/>
-            <error path="500.html" statusCode="504"/>
-            <error path="500.html" statusCode="505"/>
-            <error path="500.html" statusCode="506"/>
-            <error path="500.html" statusCode="507"/>
-            <error path="500.html" statusCode="508"/>
-            <error path="500.html" statusCode="510"/>
-            <error path="500.html" statusCode="511"/>
+            <error path="Error.html" statusCode="405"/>
+            <error path="Error.html" statusCode="406"/>
+            <error path="Error.html" statusCode="407"/>
+            <error path="Error.html" statusCode="408"/>
+            <error path="Error.html" statusCode="409"/>
+            <error path="Error.html" statusCode="410"/>
+            <error path="Error.html" statusCode="411"/>
+            <error path="Error.html" statusCode="412"/>
+            <error path="Error.html" statusCode="413"/>
+            <error path="Error.html" statusCode="414"/>
+            <error path="Error.html" statusCode="415"/>
+            <error path="Error.html" statusCode="416"/>
+            <error path="Error.html" statusCode="417"/>
+            <error path="Error.html" statusCode="418"/>
+            <error path="Error.html" statusCode="421"/>
+            <error path="Error.html" statusCode="422"/>
+            <error path="Error.html" statusCode="423"/>
+            <error path="Error.html" statusCode="424"/>
+            <error path="Error.html" statusCode="426"/>
+            <error path="Error.html" statusCode="428"/>
+            <error path="Error.html" statusCode="429"/>
+            <error path="Error.html" statusCode="431"/>
+            <error path="Error.html" statusCode="451"/>
+            <error path="Error.html" statusCode="500"/>
+            <error path="Error.html" statusCode="501"/>
+            <error path="Error.html" statusCode="502"/>
+            <error path="Error.html" statusCode="503"/>
+            <error path="Error.html" statusCode="504"/>
+            <error path="Error.html" statusCode="505"/>
+            <error path="Error.html" statusCode="506"/>
+            <error path="Error.html" statusCode="507"/>
+            <error path="Error.html" statusCode="508"/>
+            <error path="Error.html" statusCode="510"/>
+            <error path="Error.html" statusCode="511"/>
         </httpErrors>
         <httpProtocol>
             <customHeaders>
