Added Entity Framework logging

--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -16,14 +16,23 @@
         <variable name="appName" value="das-providerrelationships-web"/>
         <variable name="simplelayout" value="${longdate} [${uppercase:${level}}] [${logger}] - ${message} ${onexception:${exception:format=tostring}}"/>
         <targets>
+            <target name="Console" layout="${simplelayout}" xsi:type="Console"/>
             <target name="File" fileName="${basedir}/App_Data/logs/${appName}.${shortdate}.log" layout="${simplelayout}" xsi:type="File"/>
         </targets>
         <rules>
-            <logger name="*" minlevel="Debug" writeTo="File"/>
+            <logger name="*" minlevel="Debug" writeTo="Console, File"/>
         </rules>
     </nlog>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Extensions.Logging" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0"/>
+			</dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Microsoft.Extensions.Caching.Memory" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
                 <bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0"/>
