--- a/src/SFA.DAS.ProviderRelationships.Document.Repository/SFA.DAS.ProviderRelationships.Document.Repository.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Document.Repository/SFA.DAS.ProviderRelationships.Document.Repository.csproj
@@ -1,12 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <LangVersion>latest</LangVersion>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.1.3" />
-    <PackageReference Include="StructureMap" Version="4.7.0" />
-  </ItemGroup>
+        <Authors>DAS</Authors>
+        <Description>Cosmos DB integration SFA.DAS</Description>
+        <PackageLicenseUrl>https://github.com/SkillsFundingAgency/das-provider-relationships/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageProjectUrl>https://github.com/SkillsFundingAgency/das-provider-relationships</PackageProjectUrl>
+
+        <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+        <EmbedUntrackedSources>false</EmbedUntrackedSources>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.1.3"/>
+        <PackageReference Include="StructureMap" Version="4.7.0"/>
+    </ItemGroup>
 
 </Project>
