Moved application services from Api.Client project to ReadStore project (also added - lightweight mediator to accomodate CQS, interal modifier on ReadStore classes, InternalsVisibleTo in ReadStore project for Api.Client and UnitTest projects)

--- a/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api.Client\SFA.DAS.ProviderRelationships.Api.Client.csproj" />
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore\SFA.DAS.ProviderRelationships.ReadStore.csproj" />
     </ItemGroup>
 
 </Project>
