--- a/src/SFA.DAS.ProviderRelationships.Document.Repository.UnitTests/SFA.DAS.ProviderRelationships.Document.Repository.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Document.Repository.UnitTests/SFA.DAS.ProviderRelationships.Document.Repository.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
@@ -17,5 +17,5 @@
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Repository\SFA.DAS.ProviderRelationships.Document.Repository.csproj" />
     </ItemGroup>
-    
+
 </Project>
