--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66" />
         <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
         <PackageReference Include="NLog.Schema" Version="4.5.10" />
+        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="0.9.1" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NServiceBus" Version="5.0.1" />
