--- a/src/SFA.DAS.ProviderRelationships.ReadStore/SFA.DAS.ProviderRelationships.ReadStore.csproj
+++ b/src/SFA.DAS.ProviderRelationships.ReadStore/SFA.DAS.ProviderRelationships.ReadStore.csproj
@@ -12,7 +12,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+        <PackageReference Include="StructureMap" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
