--- a/src/SFA.DAS.ProviderRelationships.Messages/SFA.DAS.ProviderRelationships.Messages.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Messages/SFA.DAS.ProviderRelationships.Messages.csproj
@@ -21,4 +21,8 @@
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj" />
+    </ItemGroup>
+
 </Project>
