--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -133,8 +133,8 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\HealthCheck\HealthCheckRouteValues.cs" />
     <Compile Include="ViewModels\HealthCheck\HealthCheckViewModel.cs" />
-    <Compile Include="ViewModels\Home\AccountProvidersRouteValues.cs" />
-    <Compile Include="ViewModels\Home\AccountProvidersViewModel.cs" />
+    <Compile Include="ViewModels\Providers\ProvidersRouteValues.cs" />
+    <Compile Include="ViewModels\Providers\ProvidersViewModel.cs" />
     <Compile Include="ViewModels\Providers\AddedProviderRouteValues.cs" />
     <Compile Include="ViewModels\Providers\AddedProviderViewModel.cs" />
     <Compile Include="ViewModels\Providers\AddProviderRouteValues.cs" />
@@ -176,10 +176,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\HealthCheck\Index.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Providers\Add.cshtml" />
     <Content Include="Views\Providers\Added.cshtml" />
     <Content Include="Views\Providers\AlreadyAdded.cshtml" />
+    <Content Include="Views\Providers\Index.cshtml" />
     <Content Include="Views\Providers\Search.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -194,6 +194,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\img\" />
+    <Folder Include="Views\Home" />
     <Folder Include="Views\Permissions\" />
   </ItemGroup>
   <ItemGroup>
