--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -4,10 +4,10 @@
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c"/>
     </configSections>
     <appSettings>
+        <add key="APPINSIGHTS_INSTRUMENTATIONKEY" value=""/>
         <add key="ClientValidationEnabled" value="true"/>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true"/>
         <add key="EnvironmentName" value="LOCAL"/>
-        <add key="InstrumentationKey" value=""/>
         <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
         <add key="webpages:Version" value="3.0.0.0"/>
         <add key="webpages:Enabled" value="false"/>
