--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/App.config
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/App.config
@@ -5,9 +5,9 @@
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c"/>
     </configSections>
     <appSettings>
+        <add key="APPINSIGHTS_INSTRUMENTATIONKEY" value=""/>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true"/>
         <add key="EnvironmentName" value="LOCAL"/>
-        <add key="InstrumentationKey" value=""/>
     </appSettings>
     <connectionStrings>
         <add name="AzureWebJobsDashboard" connectionString="UseDevelopmentStorage=true"/>
