Added new models in readstore and changed runner in projects so we could cross reference projects and remove duplicated code

--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
@@ -27,6 +27,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.MessageHandlers\SFA.DAS.ProviderRelationships.MessageHandlers.csproj" />
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore.UnitTests\SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore\SFA.DAS.ProviderRelationships.ReadStore.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.UnitTests\SFA.DAS.ProviderRelationships.UnitTests.csproj" />
     </ItemGroup>
