--- a/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
@@ -11,11 +11,12 @@
         <PackageReference Include="Moq" Version="4.10.0" />
         <PackageReference Include="NUnit" Version="3.10.1" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+        <PackageReference Include="SFA.DAS.CosmosDb" Version="0.1.5" />
+        <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="0.1.5" />
         <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Repository.UnitTests\SFA.DAS.ProviderRelationships.Document.Repository.UnitTests.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore\SFA.DAS.ProviderRelationships.ReadStore.csproj" />
     </ItemGroup>
 
