Refactor Fixes after merge

--- a/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.ReadStore.UnitTests/SFA.DAS.ProviderRelationships.ReadStore.UnitTests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests\SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore\SFA.DAS.ProviderRelationships.ReadStore.csproj" />
     </ItemGroup>
 
