--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -201,9 +201,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\img\" />
-    <Folder Include="ViewModels\Providers" />
+    <Folder Include="ViewModels\Providers\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api.Client\SFA.DAS.ProviderRelationships.Api.Client.csproj">
+      <Project>{7f2f7041-07e0-48c0-a65a-e7ff06c65532}</Project>
+      <Name>SFA.DAS.ProviderRelationships.Api.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj">
       <Project>{9e04ae68-5753-49e7-ac56-a0cf005d19d6}</Project>
       <Name>SFA.DAS.ProviderRelationships.Types</Name>
