--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -39,6 +39,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api.Client\SFA.DAS.ProviderRelationships.Api.Client.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore\SFA.DAS.ProviderRelationships.ReadStore.csproj" />
     </ItemGroup>
