general wip (need to get latest work on server before go home!)

--- a/src/SFA.DAS.ProviderRelationships.Api/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Api/Web.config
@@ -21,6 +21,10 @@
     </nlog>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="System.Buffers" culture="neutral" publicKeyToken="cc7b13ffcd2ddd51" />
+                <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+            </dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Http" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
 				<bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0"/>
