switch only netcoreapp2.0 unit test over to net462

--- a/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
+        <TargetFramework>net462</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
