move the api's AD AuthenticationStartup into ActiveDirectory namespace + remove the api's own IAuthenticationStartup interface and use the one in ProviderRelationships

--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -97,8 +97,7 @@
   <ItemGroup>
     <Compile Include="ActionParameters\Relationships\GetAccountProviderLegalEntitiesParameters.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Authentication\AuthenticationStartup.cs" />
-    <Compile Include="Authentication\IAuthenticationStartup.cs" />
+    <Compile Include="Authentication\ActiveDirectory\AuthenticationStartup.cs" />
     <Compile Include="Authentication\AuthorizeRemoteOnlyAttribute.cs" />
     <Compile Include="Controllers\HealthCheckController.cs" />
     <Compile Include="Controllers\AccountProviderLegalEntitiesController.cs" />
