Removed ASP.NET and MVC response headers

--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -343,7 +343,7 @@
         <httpModules>
             <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
         </httpModules>
-        <httpRuntime targetFramework="4.6.2"/>
+        <httpRuntime enableVersionHeader="false" targetFramework="4.6.2"/>
     </system.web>
     <system.webServer>
         <httpErrors errorMode="Detailed" existingResponse="PassThrough">
